--- a/visualg3.0.7/VISUALG30.INI
+++ b/visualg3.0.7/VISUALG30.INI
@@ -1,9 +1,9 @@
 [Files]
-MRUFile1=C:\Users\lucas\Downloads\LUCAS\REPOSITORIO\algoritmos\visualg3.0.7\SOMADOR.ALG
-MRUFile2=C:\Users\lucas\Downloads\LUCAS\REPOSITORIO\algoritmos\SOMA.ALG
-MRUFile3=C:\Users\lucas\Downloads\LUCAS\REPOSITORIO\estudos\algoritmos\DESAFIO01.ALG
-MRUFile4=C:\Users\lucas\Downloads\LUCAS\REPOSITORIO\estudos\algoritmos\CONTAGEMINTELIGENTE.ALG
-MRUFile5=C:\Users\lucas\Downloads\LUCAS\REPOSITORIO\estudos\algoritmos\CALCULOIMC.ALG
+MRUFile1=C:\Users\lucas\Downloads\LUCAS\REPOSITORIO\algoritmos\NUMEROPRIMO.ALG
+MRUFile2=C:\Users\lucas\Downloads\LUCAS\REPOSITORIO\algoritmos\FATORIAL.ALG
+MRUFile3=C:\Users\lucas\Downloads\LUCAS\REPOSITORIO\algoritmos\CONTADORNEGATIVO.ALG
+MRUFile4=C:\Users\lucas\Downloads\LUCAS\REPOSITORIO\algoritmos\visualg3.0.7\Exemplos\TABOADA.ALG
+MRUFile5=C:\Users\lucas\Downloads\LUCAS\REPOSITORIO\algoritmos\visualg3.0.7\TESTE.alg
 
 [Editor]
 CommentAttri=2
