--- a/visualg3.0.7/VISUALG30.INI
+++ b/visualg3.0.7/VISUALG30.INI
@@ -1,9 +1,9 @@
 [Files]
-MRUFile1=C:\Users\lucas\Downloads\LUCAS\REPOSITORIO\algoritmos\Dasafio02.ALG
-MRUFile2=C:\Users\lucas\Downloads\LUCAS\REPOSITORIO\algoritmos\NUMEROPRIMO.ALG
-MRUFile3=C:\Users\lucas\Downloads\LUCAS\REPOSITORIO\algoritmos\FATORIAL.ALG
-MRUFile4=C:\Users\lucas\Downloads\LUCAS\REPOSITORIO\algoritmos\CONTADORNEGATIVO.ALG
-MRUFile5=C:\Users\lucas\Downloads\LUCAS\REPOSITORIO\algoritmos\visualg3.0.7\Exemplos\TABOADA.ALG
+MRUFile1=C:\Users\lucas\Downloads\LUCAS\REPOSITORIO\algoritmos\VALORESPARES.ALG
+MRUFile2=C:\Users\lucas\Downloads\LUCAS\REPOSITORIO\algoritmos\CONTADOR1ATE10.ALG
+MRUFile3=C:\Users\lucas\Downloads\LUCAS\REPOSITORIO\algoritmos\Dasafio02.ALG
+MRUFile4=C:\Users\lucas\Downloads\LUCAS\REPOSITORIO\algoritmos\NUMEROPRIMO.ALG
+MRUFile5=C:\Users\lucas\Downloads\LUCAS\REPOSITORIO\algoritmos\FATORIAL.ALG
 
 [Editor]
 CommentAttri=2
