--- a/visualg3.0.7/VISUALG30.INI
+++ b/visualg3.0.7/VISUALG30.INI
@@ -1,9 +1,9 @@
 [Files]
-MRUFile1=C:\Users\lucas\Downloads\LUCAS\REPOSITORIO\algoritmos\COMBINACOES.ALG
-MRUFile2=C:\Users\lucas\Downloads\LUCAS\REPOSITORIO\algoritmos\QUANTOSENTRE0E10.ALG
-MRUFile3=C:\Users\lucas\Downloads\LUCAS\REPOSITORIO\algoritmos\VALORESPARES.ALG
-MRUFile4=C:\Users\lucas\Downloads\LUCAS\REPOSITORIO\algoritmos\CONTADOR1ATE10.ALG
-MRUFile5=C:\Users\lucas\Downloads\LUCAS\REPOSITORIO\algoritmos\Dasafio02.ALG
+MRUFile1=C:\Users\lucas\Downloads\LUCAS\REPOSITORIO\algoritmos\ANALISADORVALORES.ALG
+MRUFile2=C:\Users\lucas\Downloads\LUCAS\REPOSITORIO\algoritmos\FIBONACCI.ALG
+MRUFile3=C:\Users\lucas\Downloads\LUCAS\REPOSITORIO\algoritmos\COMBINACOES.ALG
+MRUFile4=C:\Users\lucas\Downloads\LUCAS\REPOSITORIO\algoritmos\QUANTOSENTRE0E10.ALG
+MRUFile5=C:\Users\lucas\Downloads\LUCAS\REPOSITORIO\algoritmos\VALORESPARES.ALG
 
 [Editor]
 CommentAttri=2
