--- a/visualg3.0.7/VISUALG30.INI
+++ b/visualg3.0.7/VISUALG30.INI
@@ -1,9 +1,9 @@
 [Files]
-MRUFile1=C:\Users\lucas\Downloads\LUCAS\REPOSITORIO\algoritmos\SOMAFUNCAO.ALG
-MRUFile2=C:\Users\lucas\Downloads\LUCAS\REPOSITORIO\algoritmos\SOMAPARAMETROSREFERENCIA.ALG
-MRUFile3=C:\Users\lucas\Downloads\LUCAS\REPOSITORIO\algoritmos\PAROUIMPARPROCEDIMENTO.ALG
-MRUFile4=C:\Users\lucas\Downloads\LUCAS\REPOSITORIO\algoritmos\FAZSOMAPROCEDIMENTO.ALG
-MRUFile5=C:\Users\lucas\Downloads\LUCAS\REPOSITORIO\algoritmos\DETECTORPESADO.ALG
+MRUFile1=C:\Users\lucas\Downloads\LUCAS\REPOSITORIO\algoritmos\PARIMPAR.ALG
+MRUFile2=C:\Users\lucas\Downloads\LUCAS\REPOSITORIO\algoritmos\SOMAFUNCAO.ALG
+MRUFile3=C:\Users\lucas\Downloads\LUCAS\REPOSITORIO\algoritmos\SOMAPARAMETROSREFERENCIA.ALG
+MRUFile4=C:\Users\lucas\Downloads\LUCAS\REPOSITORIO\algoritmos\PAROUIMPARPROCEDIMENTO.ALG
+MRUFile5=C:\Users\lucas\Downloads\LUCAS\REPOSITORIO\algoritmos\FAZSOMAPROCEDIMENTO.ALG
 
 [Editor]
 CommentAttri=2
