--- a/visualg3.0.7/VISUALG30.INI
+++ b/visualg3.0.7/VISUALG30.INI
@@ -1,9 +1,9 @@
 [Files]
-MRUFile1=C:\Users\lucas\Downloads\LUCAS\REPOSITORIO\algoritmos\ORDENAVETOR.ALG
-MRUFile2=C:\Users\lucas\Downloads\LUCAS\REPOSITORIO\algoritmos\SOCOMC.ALG
-MRUFile3=C:\Users\lucas\Downloads\LUCAS\REPOSITORIO\algoritmos\TURMA.ALG
-MRUFile4=C:\Users\lucas\Downloads\LUCAS\REPOSITORIO\algoritmos\VALORESPARES2.ALG
-MRUFile5=C:\Users\lucas\Downloads\LUCAS\REPOSITORIO\algoritmos\TESTEVETOR.ALG
+MRUFile1=C:\Users\lucas\Downloads\LUCAS\REPOSITORIO\algoritmos\LERMATRIZ.ALG
+MRUFile2=C:\Users\lucas\Downloads\LUCAS\REPOSITORIO\algoritmos\ORDENAVETOR.ALG
+MRUFile3=C:\Users\lucas\Downloads\LUCAS\REPOSITORIO\algoritmos\SOCOMC.ALG
+MRUFile4=C:\Users\lucas\Downloads\LUCAS\REPOSITORIO\algoritmos\TURMA.ALG
+MRUFile5=C:\Users\lucas\Downloads\LUCAS\REPOSITORIO\algoritmos\VALORESPARES2.ALG
 
 [Editor]
 CommentAttri=2
